package com.example.starter.model;

public class Facture {
}
