package com.example.starter.model;

import lombok.Getter;
import lombok.Setter;

@Getter
@Setter
public class StatutC {
  private Long id;
  private String libelle;
}
